update of cart
ho aggiunto delete e sistemato put cart, aggiunto eventsandauthor come tabella e le funzioni ad essa associate
