# controllers/Events.js
@@ -3,7 +3,18 @@
 var utils = require('../utils/writer.js');
 var Events = require('../service/EventsService');
 
-
+module.exports.getAuthorsByEventId = function getAuthorsByEventId (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  var offset = req.swagger.params['offset'].value;
+  var limit = req.swagger.params['limit'].value;
+  Events.getAuthorsByEventId(id,offset,limit)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
 module.exports.getEventById = function getEventById (req, res, next) {
   var id = req.swagger.params['id'].value;
   Events.getEventById(id)
