# service/EventsService.js
@@ -21,17 +21,35 @@ exports.eventsDbSetup = function(database) {
         .references('id')
         .inTable('books')
         .onDelete('CASCADE');
+      });
+    }
+  });
+};
+
+exports.eventsAndAuthorDbSetup = function(database) {
+  sqlDb = database;
+  console.log("Checking if events table exists");
+  return database.schema.hasTable("eventsAndAuthor").then(exists => {
+    if (!exists) {
+      console.log("It doesn't so we create it");
+      return database.schema.createTable("eventsAndAuthor", table => {
+        table.integer("authorId")
+        .notNullable()
+        .references('authorid')
+        .inTable('authors')
+        .onDelete('CASCADE');
+        table.integer("eventId")
+        .notNullable()
+        .references('id')
+        .inTable('events')
+        .onDelete('CASCADE');
 
 
-       
-
+        table.unique(['authorId', 'eventId']);
+        table.primary(['authorId','eventId']);
 
       });
-
-
-
-    }
-    
+    }    
   });
 };
 
@@ -51,6 +69,19 @@ exports.getEventById = function(id) {
   });
 }
 
+/**
+ * Find events by author ID
+ *
+ * id Long ID of event that needs to be fetched
+ * returns Event
+ **/
+exports.getAuthorsByEventId = function(id,offset,limit) {
+  return sqlDb("eventsAndAuthor")
+  .where({eventId: id})
+  .then(data => {
+    return data
+  });
+}
 
 /**
  * Find events by ID
